Update 109.3 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.3 Basic network troubleshooting/109.3 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.3 Basic network troubleshooting/109.3 Lesson 1.md
@@ -277,22 +277,142 @@ PING 2001:db8:1::20(2001:db8:1::20) 56 data bytes
 connect: Network is unreachable
 ```
 
+
 ## Упражнения для закрепления
 
+1. Какие команды можно использовать для вывода списка сетевых интерфейсов? 
+2. Как бы вы временно отключили интерфейс? Как бы вы его снова включили? 
+3. Что из следующего является разумной маской подсети для IPv4?
+| `0.0.0.255`  |   |
+| `255.0.255.0`|   |
+| `255.252.0.0`|   |                           
+| `/24`        |   |
+4. Какие команды можно использовать для проверки маршрута по умолчанию?
+5. Как добавить второй IP-адрес к интерфейсу?
 
 
 ## Упражнения на размышление
 
-
+1. Какую подкоманду `ip` можно использовать для настройки тегов `vlan`? 
+2. Как бы вы настроили маршрут по умолчанию? 
+3. Как получить подробную информацию о команде `ip neighbour`? Что произойдет, если вы запустите его отдельно? 
+4. Как бы вы сделали резервную копию своей таблицы маршрутизации? Как бы вы восстановили из него? 
+5. Какую подкоманду `ip` можно использовать для настройки параметров связующего дерева?
 
 
 ## Резюме
 
+Сеть обычно настраивается с помощью сценариев запуска системы или вспомогательного средства, такого как NetworkManager. В большинстве дистрибутивов есть инструменты, которые редактируют файлы конфигурации сценария запуска за вас. За подробностями обращайтесь к документации вашего дистрибутива. 
+
+Возможность вручную настроить сеть позволяет более эффективно устранять неполадки. Это полезно в минимальных средах, используемых для таких вещей, как восстановление из резервных копий или переход на новое оборудование. 
+
+Утилиты, описанные в этом разделе, обладают большей функциональностью, чем рассмотренные в этом уроке. Было бы целесообразно просмотреть справочную страницу каждого из них, чтобы ознакомиться с доступными опциями. Команды `ss` и `ip` - это современный способ решения задач, в то время как остальные, которые рассматриваются, хотя и широко используются, считаются устаревшими инструментами. 
+
+Лучший способ познакомиться с описываемыми инструментами - это практика. Используя компьютер со скромным объемом оперативной памяти, можно настроить виртуальную сетевая лаборатория, используя виртуальные машины, с которыми вы можете практиковаться. Трех виртуальных машин достаточно, чтобы освоить перечисленные инструменты. 
+
+В этом уроке используются следующие команды: 
+
+`ifconfig`  
+Устаревшая утилита, используемая для настройки сетевых интерфейсов и просмотра их состояний. 
+
+`ip`  
+Современная и универсальная утилита, используемая для настройки сетевых интерфейсов и просмотра их состояния. 
+
+`netstat`  
+Устаревшая команда, используемая для просмотра текущих сетевых подключений и информации о маршруте. 
+
+`route`  
+Устаревшая команда, используемая для просмотра или изменения таблицы маршрутизации системы.
 
 
 ## Ответы на упражнения для закрепления
 
+**1. Какие команды можно использовать для вывода списка сетевых интерфейсов?**  
+Любая из команд ниже: `ip link`, `ifconfig -a` или `ls /sys/class/net`
 
+**2. Как бы вы временно отключили интерфейс? Как бы вы его снова включили?**
+Вы можете использовать `ifconfig` или `ip link`: Используя `ifconfig`:
+```console
+$ ifconfig wlan1 down
+$ ifconfig wlan1 up
+```
+Используя `ip link`:
+```console
+$ ifconfig wlan1 down
+$ ifconfig wlan1 up
+```
+
+**3. Что из следующего является разумной маской подсети для IPv4?**
+* `255.252.0.0`                           
+* `/24`  
+Остальные перечисленные маски недействительны, поскольку они не разделяют адрес четко на две части: первая часть определяет сеть, а вторая - хост. Крайние левые биты маски всегда будут равны `1`, а правые биты всегда будут равны `0`.
+
+**4. Какие команды можно использовать для проверки маршрута по умолчанию?**
+Вы можете использовать `route`, `netstat -r` или `ip route`:
+```console
+$ route
+Kernel IP routing table
+Destination     Gateway         Genmask         Flags Metric Ref    Use Iface
+default         server          0.0.0.0         UG    600    0        0 wlan1
+192.168.1.0     0.0.0.0         255.255.255.0   U     600    0        0 wlan1
+$ netstat -r
+Kernel IP routing table
+Destination     Gateway         Genmask         Flags   MSS Window  irtt Iface
+default         server          0.0.0.0         UG        0 0          0 wlan1
+192.168.1.0     0.0.0.0         255.255.255.0   U         0 0          0 wlan1
+$ ip route
+default via 192.168.1.20 dev wlan1 proto static metric 600
+192.168.1.0/24 dev wlan1 proto kernel scope link src 192.168.1.24 metric 600
+```
+
+**5. Как добавить второй IP-адрес к интерфейсу?**
+Вы должны использовать `ip address` или `ifconfig`. Имейте в виду, что `ifconfig` - устаревший инструмент:
+```console
+$ ip addr add 172.16.15.16/16 dev enp0s9 label enp0s9:sub1
+```
+Часть команды `label enp0s9:sub1` добавляет псевдоним к `enp0s9`. Если вы не используете устаревшую версию `ifconfig`, можете пропустить это. Если вы это сделаете, команда все равно будет работать, но только что добавленный адрес не будет отображаться в выводе `ifconfig`. 
+
+Вы также можете использовать `ifconfig`:
+```console
+$ ifconfig enp0s9:sub1 172.16.15.16/16
+```
 
 
 ## Ответы на упражнения для размышления
+
+**1. Какую подкоманду `ip` можно использовать для настройки тегов `vlan`?**
+`ip link` имеет опцию `vlan`, которую можно использовать. Ниже приведен пример тегирования субинтерфейса с помощью `vlan 20`.
+```console
+# ip link add link enp0s9 name enp0s9.20 type vlan id 20
+```
+
+**2. Как бы вы настроили маршрут по умолчанию?**
+Использование `route` или `ip route`:
+```console
+# route add default gw 192.168.1.1
+# ip route add default via 192.168.1.1
+```
+
+**3. Как получить подробную информацию о команде `ip neighbour`? Что произойдет, если вы запустите его отдельно?**
+Прочитав страницу руководства:
+```console
+$ man ip-neigbour
+```
+Он отображает ваш кеш ARP:
+```console
+$ ip neighbour
+10.0.2.2 dev enp0s3 lladdr 52:54:00:12:35:02 REACHABLE
+```
+
+**4. Как бы вы сделали резервную копию своей таблицы маршрутизации? Как бы вы восстановили его?**
+Пример ниже демонстрирует резервное копирование и восстановление таблицы маршрутизации:
+```console
+# ip route save > /root/routes/route_backup
+# ip route restore < /root/routes/route_backup
+```
+
+**5. Какую подкоманду `ip` можно использовать для настройки параметров связующего дерева?**
+Подобно управлению настройками vlan, `ip link` может настраивать связующее дерево с использованием типа `bridge`. В примере показано добавление виртуального интерфейса с приоритетом STP 50:
+```console
+# ip link add link enp0s9 name enp0s9.50 type bridge priority 50
+```
