Update 109.3 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.3 Basic network troubleshooting/109.3 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.3 Basic network troubleshooting/109.3 Lesson 2.md
@@ -10,4 +10,121 @@
 
 ## Введение
 
-Операционные системы на базе Linux имеют множество инструментов для устранения сетевых проблем. В этом уроке будут рассмотрены некоторые из наиболее распространенных. На этом этапе вы должны иметь представление об OSI или других многоуровневых моделях сети, адресации IPv4 или IPv6, а также об основах маршрутизации и коммутации. Лучший способ проверить сетевое соединение - попробовать использовать ваше приложение. Если это не сработает, существует множество инструментов, которые помогут диагностировать проблему.
+Операционные системы на базе Linux имеют множество инструментов для устранения сетевых проблем. В этом уроке будут рассмотрены некоторые из наиболее распространенных. На этом этапе вы должны иметь представление об OSI или других многоуровневых моделях сети, адресации IPv4 или IPv6, а также об основах маршрутизации и коммутации. 
+
+Лучший способ проверить сетевое соединение - попробовать использовать ваше приложение. Если это не сработает, существует множество инструментов, которые помогут диагностировать проблему.
+
+
+## Тестирование соединений с помощью `ping`
+
+Команды `ping` и `ping6` могут использоваться для отправки эхо-запроса ICMP на адрес IPv4 или IPv6 соответственно. Эхо-запрос ICMP отправляет небольшой объем данных на адрес назначения. Если адрес назначения доступен, он отправит отправителю эхо-ответное сообщение ICMP с теми же данными, которые были отправлены ему:
+
+```console
+$ ping -c 3 192.168.50.2
+PING 192.168.50.2 (192.168.50.2) 56(84) bytes of data.
+64 bytes from 192.168.50.2: icmp_seq=1 ttl=64 time=0.525 ms
+64 bytes from 192.168.50.2: icmp_seq=2 ttl=64 time=0.419 ms
+64 bytes from 192.168.50.2: icmp_seq=3 ttl=64 time=0.449 ms
+
+--- 192.168.50.2 ping statistics ---
+3 packets transmitted, 3 received, 0% packet loss, time 2006ms
+rtt min/avg/max/mdev = 0.419/0.464/0.525/0.047 ms
+```
+```console
+$ ping6 -c 3 2001:db8::10
+PING 2001:db8::10(2001:db8::10) 56 data bytes
+64 bytes from 2001:db8::10: icmp_seq=1 ttl=64 time=0.425 ms
+64 bytes from 2001:db8::10: icmp_seq=2 ttl=64 time=0.480 ms
+64 bytes from 2001:db8::10: icmp_seq=3 ttl=64 time=0.725 ms
+
+--- 2001:db8::10 ping statistics ---
+3 packets transmitted, 3 received, 0% packet loss, time 2000ms
+rtt min/avg/max/mdev = 0.425/0.543/0.725/0.131 ms
+```
+
+Параметр `-c` используется для указания количества пакетов для отправки. Если вы опустите этот параметр, `ping` и `ping6` будут продолжать отправлять пакеты, пока вы не остановите его, обычно с помощью комбинации клавиш <kbd>Ctrl</kbd>+<kbd>C</kbd>. 
+
+Тот факт, что вы не можете пинговать хост, не означает, что вы не можете подключиться к нему. Многие организации имеют брандмауэры или списки управления доступом к маршрутизаторам, которые блокируют все, кроме минимума, необходимого для работы их систем. Это включает эхо-запрос и ответы ICMP. Поскольку эти пакеты могут включать произвольные данные, умный злоумышленник может использовать их для эксфильтрации данных.
+
+
+## Трассировка маршрутов
+
+Программы `traceroute` и `traceroute6` могут быть использованы для того, чтобы показать вам маршрут, по которому пакет добирается до места назначения. Они делают это, отправляя несколько пакетов в пункт назначения, увеличивая `время жизни` (TTL) в поле IP-заголовка с каждым последующим пакетом. Каждый маршрутизатор по пути ответит сообщением ICMP о превышении TTL:
+
+```console
+$ traceroute 192.168.1.20
+traceroute to 192.168.1.20 (192.168.1.20), 30 hops max, 60 byte packets
+ 1  10.0.2.2 (10.0.2.2)  0.396 ms  0.171 ms  0.132 ms
+ 2  192.168.1.20 (192.168.1.20)  2.665 ms  2.573 ms  2.573 ms
+$ traceroute 192.168.50.2
+traceroute to 192.168.50.2 (192.168.50.2), 30 hops max, 60 byte packets
+ 1  192.168.50.2 (192.168.50.2)  0.433 ms  0.273 ms  0.171 ms
+$ traceroute6 2001:db8::11
+traceroute to 2001:db8::11 (2001:db8::11), 30 hops max, 80 byte packets
+ 1  2001:db8::11 (2001:db8::11)  0.716 ms  0.550 ms  0.641 ms
+$ traceroute 2001:db8::11
+traceroute to 2001:db8::11 (2001:db8::11), 30 hops max, 80 byte packets
+ 1  2001:db8::10 (2001:db8::11)  0.617 ms  0.461 ms  0.387 ms
+$ traceroute net2.example.net
+traceroute to net2.example.net (192.168.50.2), 30 hops max, 60 byte packets
+ 1  net2.example.net (192.168.50.2)  0.533 ms  0.529 ms  0.504 ms
+$ traceroute6 net2.example.net
+traceroute to net2.example.net (2001:db8::11), 30 hops max, 80 byte packets
+ 1  net2.example.net (2001:db8::11)  0.738 ms  0.607 ms  0.304 ms
+```
+
+По умолчанию `traceroute` отправляет 3 пакета UDP с нежелательными данными на порт 33434, увеличивая его каждый раз при отправке пакета. Каждая строка в выходных данных команды представляет собой интерфейс маршрутизатора, через который проходит пакет. Время, указанное в каждой строке вывода, - это время приема-передачи для каждого пакета. IP-адрес - это адрес рассматриваемого интерфейса маршрутизатора. Если `traceroute` может, он использует DNS-имя интерфейса маршрутизатора. Иногда вместо времени вы увидите `*`. Когда это происходит, это означает, что `traceroute` никогда не получала сообщение о превышении TTL для этого пакета. Когда вы начинаете это видеть, это часто означает, что последний ответ - это последний переход на маршруте. 
+
+Если у вас есть доступ к `root`, опция `-I` установит `traceroute` на использование эхо-запросов ICMP вместо пакетов UDP. Это часто более эффективно, чем UDP, потому что целевой хост с большей вероятностью ответит на эхо-запрос ICMP, чем на пакет UDP:
+
+```console
+# traceroute -I learning.lpi.org
+traceroute to learning.lpi.org (208.94.166.201), 30 hops max, 60 byte packets
+ 1  047-132-144-001.res.spectrum.com (47.132.144.1)  9.764 ms  9.702 ms  9.693 ms
+ 2  096-034-094-106.biz.spectrum.com (96.34.94.106)  8.389 ms  8.481 ms  8.480 ms
+ 3  dtr01hlrgnc-gbe-4-15.hlrg.nc.charter.com (96.34.64.172)  8.763 ms  8.775 ms  8.770 ms
+ 4  acr01mgtnnc-vln-492.mgtn.nc.charter.com (96.34.67.202)  27.080 ms  27.154 ms  27.151 ms
+ 5  bbr01gnvlsc-bue-3.gnvl.sc.charter.com (96.34.2.112)  31.339 ms  31.398 ms  31.395 ms
+ 6  bbr01aldlmi-tge-0-0-0-13.aldl.mi.charter.com (96.34.0.161)  39.092 ms  38.794 ms  38.821 ms
+ 7  prr01ashbva-bue-3.ashb.va.charter.com (96.34.3.51)  34.208 ms  36.474 ms  36.544 ms
+ 8  bx2-ashburn.bell.ca (206.126.236.203)  53.973 ms  35.975 ms  38.250 ms
+ 9  tcore4-ashburnbk_0-12-0-0.net.bell.ca (64.230.125.190)  66.315 ms  65.319 ms  65.345 ms
+10  tcore4-toronto47_2-8-0-3.net.bell.ca (64.230.51.22)  67.427 ms  67.502 ms  67.498 ms
+11  agg1-toronto47_xe-7-0-0_core.net.bell.ca (64.230.161.114)  61.270 ms  61.299 ms  61.291 ms
+12  dis4-clarkson16_5-0.net.bell.ca (64.230.131.98)  61.101 ms  61.177 ms  61.168 ms
+13  207.35.12.142 (207.35.12.142)  70.009 ms  70.069 ms  59.893 ms
+14  unassigned-117.001.centrilogic.com (66.135.117.1)  61.778 ms  61.950 ms  63.041 ms
+15  unassigned-116.122.akn.ca (66.135.116.122)  62.702 ms  62.759 ms  62.755 ms
+16  208.94.166.201 (208.94.166.201)  62.936 ms  62.932 ms  62.921 ms
+```
+
+Некоторые организации блокируют эхо-запросы и ответы ICMP. Чтобы обойти это, вы можете использовать TCP. Используя известный открытый TCP-порт, вы можете гарантировать, что целевой хост ответит. Чтобы использовать TCP, используйте параметр `-T` вместе с `-p`, чтобы указать порт. Как и в случае с эхо-запросами ICMP, для этого у вас должен быть доступ к `root`:
+
+```console
+# traceroute -m 60 -T -p 80  learning.lpi.org
+traceroute to learning.lpi.org (208.94.166.201), 60 hops max, 60 byte packets
+ 1  * * *
+ 2  096-034-094-106.biz.spectrum.com (96.34.94.106)  12.178 ms  12.229 ms  12.175 ms
+ 3  dtr01hlrgnc-gbe-4-15.hlrg.nc.charter.com (96.34.64.172)  12.134 ms  12.093 ms  12.062 ms
+ 4  acr01mgtnnc-vln-492.mgtn.nc.charter.com (96.34.67.202)  31.146 ms  31.192 ms  31.828 ms
+ 5  bbr01gnvlsc-bue-3.gnvl.sc.charter.com (96.34.2.112)  39.057 ms  46.706 ms  39.745 ms
+ 6  bbr01aldlmi-tge-0-0-0-13.aldl.mi.charter.com (96.34.0.161)  50.590 ms  58.852 ms  58.841 ms
+ 7  prr01ashbva-bue-3.ashb.va.charter.com (96.34.3.51)  34.556 ms  37.892 ms  38.274 ms
+ 8  bx2-ashburn.bell.ca (206.126.236.203)  38.249 ms  36.991 ms  36.270 ms
+ 9  tcore4-ashburnbk_0-12-0-0.net.bell.ca (64.230.125.190)  66.779 ms  63.218 ms tcore3-ashburnbk_100ge0-12-0-0.net.bell.ca (64.230.125.188)  60.441 ms
+10  tcore4-toronto47_2-8-0-3.net.bell.ca (64.230.51.22)  63.932 ms  63.733 ms  68.847 ms
+11  agg2-toronto47_xe-7-0-0_core.net.bell.ca (64.230.161.118)  60.144 ms  60.443 ms agg1-toronto47_xe-7-0-0_core.net.bell.ca (64.230.161.114)  60.851 ms
+12  dis4-clarkson16_5-0.net.bell.ca (64.230.131.98)  67.246 ms dis4-clarkson16_7-0.net.bell.ca (64.230.131.102)  68.404 ms dis4-clarkson16_5-0.net.bell.ca (64.230.131.98)  67.403 ms
+13  207.35.12.142 (207.35.12.142)  66.138 ms  60.608 ms  64.656 ms
+14  unassigned-117.001.centrilogic.com (66.135.117.1)  70.690 ms  62.190 ms  61.787 ms
+15  unassigned-116.122.akn.ca (66.135.116.122)  62.692 ms  69.470 ms  68.815 ms
+16  208.94.166.201 (208.94.166.201)  61.433 ms  65.421 ms  65.247 ms
+17  208.94.166.201 (208.94.166.201)  64.023 ms  62.181 ms  61.899 ms
+```
+
+Как и `ping`, у `traceroute` есть свои ограничения. Межсетевые экраны и маршрутизаторы могут блокировать пакеты, отправляемые или возвращаемые в `traceroute`. Если у вас есть `root`-доступ, есть варианты, которые помогут вам получить точные результаты.
+
+
+## Поиск MTU с помощью `tracepath`
+
+Команда `tracepath` похожа на `traceroute`. Разница в том, что он отслеживает размер *максимального блока передачи* (MTU) по пути. MTU - это либо сконфигурированная настройка сетевого интерфейса, либо аппаратное ограничение самого большого блока данных протокола, который он может передавать или получать. Программа  `tracepath` работает так же, как `traceroute`, в том смысле, что она увеличивает TTL с каждым пакетом. Он отличается отправкой очень большой дейтаграммы UDP. Почти неизбежно, что дейтаграмма будет больше, чем устройство с наименьшим MTU на маршруте. Когда пакет достигает этого устройства, устройство обычно отвечает пакетом о недоступности пункта назначения. В пакете о недоступности пункта назначения ICMP есть поле для MTU канала, по которому он отправил бы пакет, если бы мог. Затем tracepath отправляет все последующие пакеты этого размера:
