Update 109.3 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.3 Basic network troubleshooting/109.3 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.3 Basic network troubleshooting/109.3 Lesson 2.md
@@ -127,4 +127,73 @@ traceroute to learning.lpi.org (208.94.166.201), 60 hops max, 60 byte packets
 
 ## Поиск MTU с помощью `tracepath`
 
-Команда `tracepath` похожа на `traceroute`. Разница в том, что он отслеживает размер *максимального блока передачи* (MTU) по пути. MTU - это либо сконфигурированная настройка сетевого интерфейса, либо аппаратное ограничение самого большого блока данных протокола, который он может передавать или получать. Программа  `tracepath` работает так же, как `traceroute`, в том смысле, что она увеличивает TTL с каждым пакетом. Он отличается отправкой очень большой дейтаграммы UDP. Почти неизбежно, что дейтаграмма будет больше, чем устройство с наименьшим MTU на маршруте. Когда пакет достигает этого устройства, устройство обычно отвечает пакетом о недоступности пункта назначения. В пакете о недоступности пункта назначения ICMP есть поле для MTU канала, по которому он отправил бы пакет, если бы мог. Затем tracepath отправляет все последующие пакеты этого размера:
+Команда `tracepath` похожа на `traceroute`. Разница в том, что он отслеживает размер *максимального блока передачи* (MTU) по пути. MTU - это либо сконфигурированная настройка сетевого интерфейса, либо аппаратное ограничение самого большого блока данных протокола, который он может передавать или получать. Программа  `tracepath` работает так же, как `traceroute`, в том смысле, что она увеличивает TTL с каждым пакетом. Он отличается отправкой очень большой дейтаграммы UDP. Почти неизбежно, что дейтаграмма будет больше, чем устройство с наименьшим MTU на маршруте. Когда пакет достигает этого устройства, устройство обычно отвечает пакетом о недоступности пункта назначения. В пакете о недоступности пункта назначения ICMP есть поле для MTU канала, по которому он отправил бы пакет, если бы мог. Затем `tracepath` отправляет все последующие пакеты этого размера:
+
+```console
+$ tracepath 192.168.1.20
+ 1?: [LOCALHOST]                                         pmtu 1500
+ 1:  10.0.2.2                                              0.321ms
+ 1:  10.0.2.2                                              0.110ms
+ 2:  192.168.1.20                                          2.714ms reached
+     Resume: pmtu 1500 hops 2 back 64
+```
+
+В отличие от `traceroute`, вы должны явно использовать `tracepath6` для IPv6:
+
+```console
+$ tracepath 2001:db8::11
+tracepath: 2001:db8::11: Address family for hostname not supported
+$ tracepath6 2001:db8::11
+ 1?: [LOCALHOST]                        0.027ms pmtu 1500
+ 1:  net2.example.net                                      0.917ms reached
+ 1:  net2.example.net                                      0.527ms reached
+     Resume: pmtu 1500 hops 1 back 1
+```
+
+Вывод аналогичен `traceroute`. Преимущество `tracepath` в том, что в последней строке выводится наименьшее значение MTU для всей ссылки. Это может быть полезно для устранения неполадок соединений, которые не могут обрабатывать фрагменты. 
+
+Как и в случае с предыдущими инструментами устранения неполадок, оборудование может блокировать ваши пакеты.
+
+
+## Создание произвольных соединений
+
+Программа `nc`, известная как `netcat`, может отправлять или получать произвольные данные через сетевое соединение TCP или UDP. Следующие примеры должны прояснить его функциональность. 
+Вот пример настройки прослушивателя на порт `1234`:
+
+```console
+$ nc -l 1234
+LPI Example
+```
+
+Вывод `LPI Example` появляется после примера ниже, который настраивает отправителя `netcat` для отправки пакетов на `net2.example.net` через порт `1234`. Параметр `-l` используется для указания, что вы хотите, чтобы `nc` получал данные вместо отправки этого:
+
+```console
+$ nc net2.example.net 1234
+LPI Example
+```
+
+Нажмите <kbd>Ctrl</kbd>+<kbd>C</kbd> в любой системе, чтобы остановить соединение. 
+
+Netcat работает как с адресами IPv4, так и с IPv6. Он работает как с TCP, так и с UDP. Его даже можно использовать для установки грубой удаленной оболочки.
+
+>Обратите внимание, что не каждая установка `nc` поддерживает параметр `-e`. Обязательно просмотрите страницы руководства для вашей установки, чтобы узнать о безопасности этой опции, а также об альтернативных методах выполнения команд в удаленной системе.
+
+```console
+$ hostname
+net2
+$ nc -u -e /bin/bash -l 1234
+```
+
+Параметр `-u` предназначен для UDP. `-e` указывает `netcat` отправлять все, что он получает, на стандартный ввод исполняемого файла, следующего за ним. В этом примере `/bin/bash`.
+
+```console
+$ hostname
+net1
+$ nc -u net2.example.net 1234
+hostname
+net2
+pwd
+/home/emma
+```
+
+Обратите внимание, как выходные данные команды `hostname` совпадают с выходными данными прослушивающего хоста, а команда `pwd` выводит каталог?
