Update 109.3 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.3 Basic network troubleshooting/109.3 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.3 Basic network troubleshooting/109.3 Lesson 2.md
@@ -197,3 +197,51 @@ pwd
 ```
 
 Обратите внимание, как выходные данные команды `hostname` совпадают с выходными данными прослушивающего хоста, а команда `pwd` выводит каталог?
+
+
+## Просмотр текущих подключений и слушателей
+
+Программы `netstat` и `ss` можно использовать для просмотра статуса ваших текущих слушателей и подключений. Как и `ifconfig`, `netstat` - устаревший инструмент. И `netstat`, и `ss` имеют одинаковый вывод и параметры. 
+
+Вот некоторые параметры, доступные для обеих программ: 
+
+`-а`  
+Показывает все сокеты. 
+
+`-l`  
+Показывает сокеты для прослушивания. 
+
+`-p`  
+Показывает процесс, связанный с подключением. 
+
+`-n`  
+Предотвращает поиск имен как для портов, так и для адресов. 
+
+`-t`  
+Показывает TCP-соединения. 
+
+`-u`  
+Показывает UDP-соединения. 
+
+В приведенных ниже примерах показан результат часто используемого набора параметров для обеих программ:
+
+```console
+# netstat -tulnp
+Active Internet connections (only servers)
+Proto Recv-Q Send-Q Local Address           Foreign Address         State       PID/Program name
+tcp        0      0 0.0.0.0:22              0.0.0.0:*               LISTEN      892/sshd
+tcp        0      0 127.0.0.1:25            0.0.0.0:*               LISTEN      1141/master
+tcp6       0      0 :::22                   :::*                    LISTEN      892/sshd
+tcp6       0      0 ::1:25                  :::*                    LISTEN      1141/master
+udp        0      0 0.0.0.0:68              0.0.0.0:*                           692/dhclient
+# ss -tulnp
+# ss -tulnp
+Netid  State      Recv-Q Send-Q      Local Address:Port                     Peer Address:Port
+udp    UNCONN     0      0                       :68                                  *:                   users:(("dhclient",pid=693,fd=6))
+tcp    LISTEN     0      128                     :22                                  *:                   users:(("sshd",pid=892,fd=3))
+tcp    LISTEN     0      100             127.0.0.1:25                                  :                   users:(("master",pid=1099,fd=13))
+tcp    LISTEN     0      128                  [::]:22                               [::]:*                   users:(("sshd",pid=892,fd=4))
+tcp    LISTEN     0      100                 [::1]:25                               [::]:*                   users:(("master",pid=1099,fd=14))
+```
+
+Столбец `Recv-Q` - это количество пакетов, которые сокет получил, но не передал своей программе. Столбец `Send-Q` - это количество пакетов, отправленных сокетом, которые не были подтверждены получателем. Остальные столбцы говорят сами за себя.
