Update 109.3 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.3 Basic network troubleshooting/109.3 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.3 Basic network troubleshooting/109.3 Lesson 2.md
@@ -245,3 +245,117 @@ tcp    LISTEN     0      100                 [::1]:25                           
 ```
 
 Столбец `Recv-Q` - это количество пакетов, которые сокет получил, но не передал своей программе. Столбец `Send-Q` - это количество пакетов, отправленных сокетом, которые не были подтверждены получателем. Остальные столбцы говорят сами за себя.
+
+
+## Упражнения для закрепления
+
+1. Какие команды вы бы использовали для отправки ICMP на `learning.lpi.org`? 
+2. Как вы могли определить путь к `8.8.8.8`? 
+3. Какая команда покажет вам, прослушивают ли какие-либо процессы TCP-порт 80? 
+4. Как узнать, какой процесс прослушивает порт? 
+5. Как определить максимальный MTU сетевого пути?
+
+
+## Упражнения на размышление
+
+1. Как вы могли бы использовать netcat для отправки HTTP-запроса на веб-сервер? 
+2. Каковы несколько причин, по которым пинг хоста может завершиться неудачно? 
+3. Назовите инструмент, который вы могли бы использовать, чтобы видеть, как сетевые пакеты достигают или покидают хост Linux? 
+4. Как заставить `traceroute` использовать другой интерфейс? 
+5. Может ли `traceroute` сообщать о MTU?
+
+
+## Резюме
+
+Сеть обычно настраивается с помощью сценариев запуска системы или вспомогательного средства, такого как NetworkManager. В большинстве дистрибутивов есть инструменты, которые редактируют файлы конфигурации сценария запуска за вас. За подробностями обращайтесь к документации вашего дистрибутива. 
+
+Возможность вручную настроить сеть позволяет более эффективно устранять неполадки. Это полезно в минимальных средах, используемых для таких вещей, как восстановление из резервных копий или переход на новое оборудование. 
+
+Утилиты, описанные в этом разделе, обладают большей функциональностью, чем рассмотренные в этом уроке. Было бы целесообразно просмотреть справочную страницу каждого из них, чтобы ознакомиться с доступными опциями. Команды `ss` и `ip` - это современный способ решения задач, в то время как остальные, которые рассматриваются, хотя и широко используются, считаются устаревшими инструментами. 
+
+Лучший способ познакомиться с описываемыми инструментами - это практика. Используя компьютер со скромным объемом оперативной памяти, можно настроить виртуальную сетевую лабораторию, используя виртуальные машины, с которыми вы можете практиковаться. Трех виртуальных машин достаточно, чтобы освоить перечисленные инструменты. 
+
+Команды, рассматриваемые в этом уроке, включают: 
+
+`ping` и `ping6`  
+Используется для передачи пакетов ICMP на удаленный хост для проверки доступности сетевого соединения. 
+
+`traceroute` и `traceroute6`  
+Используется для отслеживания пути в сети для определения возможности подключения к сети. 
+
+`tracepath` и `tracepath6`  
+Используется для отслеживания пути в сети, а также для определения размеров MTU по маршруту. 
+
+`nc` Используется для установки произвольных подключений в сети для проверки возможности подключения, а также для запроса сети на наличие доступных служб и устройств. 
+
+`netstat`  
+Устаревшая команда, используемая для определения открытых сетевых подключений и статистики системы. 
+
+`ss`  
+Современная команда, используемая для определения открытых сетевых подключений и статистики системы.
+
+
+## Ответы на упражнения для закрепления
+
+**1. Какие команды вы бы использовали для отправки ICMP на `learning.lpi.org`?**  
+Вы бы использовали `ping` или `ping6`:
+```console
+$ ping learning.lpi.org
+```
+или
+```console
+$ ping6 learning.lpi.org
+```
+
+**2. Как вы могли определить путь к `8.8.8.8`?**  
+Используя команды `tracepath` или `traceroute`.
+```console
+$ tracepath 8.8.8.8
+```
+или
+```console
+$ traceroute 8.8.8.8
+```
+
+**3. Какая команда покажет вам, прослушивают ли какие-либо процессы TCP-порт 80?**  
+При помощи `ss`:
+```console
+$ ss -ln | grep ":80"
+```
+При помощи `netstat`:
+```console
+$ netstat -ln | grep ":80"
+```
+Хотя это не указано в списке требований для экзамена, вы также можете использовать `lsof`:
+```console
+# lsof -Pi:80
+```
+
+**4. Как узнать, какой процесс прослушивает порт?**  
+Опять же, есть несколько способов сделать это. Вы можете использовать `lsof` так же, как и в предыдущем ответе, заменив номер порта. Вы также можете использовать `netstat` или `ss` с параметром `-p`. Помните, что `netstat` считается устаревшим инструментом.
+```console
+# netstat -lnp | grep ":22"
+```
+Те же параметры, которые работают с `netstat`, также работают с `ss`:
+```console
+# ss -lnp | grep ":22"
+```
+
+**5. Как определить максимальный MTU сетевого пути?**
+Используя команду `tracepath`:
+```console
+$ tracepath somehost.example.com
+```
+
+
+## Ответы на упражнения для размышления
+
+**1. Как вы могли бы использовать netcat для отправки HTTP-запроса на веб-сервер?**  
+
+**2. Каковы несколько причин, по которым пинг хоста может завершиться неудачно?**  
+
+**3. Назовите инструмент, который вы могли бы использовать, чтобы видеть, как сетевые пакеты достигают или покидают хост Linux?**
+
+**4. Как заставить `traceroute` использовать другой интерфейс?**
+
+**5. Может ли `traceroute` сообщать о MTU?**  
