Update 109.3 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.3 Basic network troubleshooting/109.3 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.3 Basic network troubleshooting/109.3 Lesson 2.md
@@ -351,11 +351,53 @@ $ tracepath somehost.example.com
 ## Ответы на упражнения для размышления
 
 **1. Как вы могли бы использовать netcat для отправки HTTP-запроса на веб-сервер?**  
+Введя строку HTTP-запроса, любые заголовки и пустую строку в терминал:
+```console
+$ nc learning.lpi.org 80
+GET /index.html HTTP/1.1
+HOST: learning.lpi.org
+
+HTTP/1.1 302 Found
+Location: https://learning.lpi.org:443/index.html
+Date: Wed, 27 May 2020 22:54:46 GMT
+Content-Length: 5
+Content-Type: text/plain; charset=utf-8
+
+Found
+```
 
 **2. Каковы несколько причин, по которым пинг хоста может завершиться неудачно?**  
+Есть ряд возможных причин. Вот некоторые: 
+* Удаленный хост не работает. 
+* ACL маршрутизатора блокирует ваш пинг. 
+* Брандмауэр удаленного хоста блокирует ваш пинг. 
+* Возможно, вы используете неправильное имя хоста или адрес. 
+* Разрешение вашего имени возвращает неверный адрес. 
+* Сетевая конфигурация вашего устройства неверна. 
+* Брандмауэр вашего компьютера блокирует его. 
+* Сетевая конфигурация удаленного хоста неверна. 
+* Интерфейсы вашей машины отключены. 
+* Интерфейсы удаленной машины отключены. 
+* Сетевой компонент, такой как коммутатор, кабель или маршрутизатор между вашим компьютером и пультом дистанционного управления, больше не работает.
 
 **3. Назовите инструмент, который вы могли бы использовать, чтобы видеть, как сетевые пакеты достигают или покидают хост Linux?**
+Можно использовать как `tcpdump`, так и `wirehark`.
 
 **4. Как заставить `traceroute` использовать другой интерфейс?**
+Используя параметр `-i`:
+```console
+$ traceroute -i eth2 learning.lpi.org
+traceroute -i eth2 learning.lpi.org
+traceroute to learning.lpi.org (208.94.166.201), 30 hops max, 60 byte packets
+...
+```
 
 **5. Может ли `traceroute` сообщать о MTU?**  
+Да, с параметром `--mtu`:
+```console
+# traceroute -I --mtu  learning.lpi.org
+traceroute to learning.lpi.org (208.94.166.201), 30 hops max, 65000 byte packets
+ 1  047-132-144-001.res.spectrum.com (47.132.144.1)  9.974 ms F=1500  10.476 ms  4.743 ms
+ 2  096-034-094-106.biz.spectrum.com (96.34.94.106)  8.697 ms  9.963 ms  10.321 ms
+...
+```
