Update 109.4 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.4 Configure client side DNS/109.4 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.4 Configure client side DNS/109.4 Lesson 1.md
@@ -1,4 +1,4 @@
-# 109.4 Урок 2
+# 109.4 Урок 1
 
 | **Сертификат:** | LPIC-1                                      |
 |:----------------|:--------------------------------------------|
@@ -10,10 +10,12 @@
 
 ## Введение
 
-В этом уроке рассказывается о настройке разрешения имен на стороне клиента и о том, как использовать несколько инструментов разрешения имен CLI. Запоминать и поддерживать IP-адреса, UID, GID и другие числа для всего невозможно. Службы разрешения имен переводят легко запоминающиеся имена в числа и наоборот. В этом уроке основное внимание уделяется разрешению имен хостов, но аналогичный процесс происходит с именами пользователей, именами групп, номерами портов и некоторыми другими.
+В этом уроке рассказывается о настройке преобразования имен на стороне клиента и о том, как использовать несколько CLI инструментов разименования. 
+
+Запоминать и поддерживать IP-адреса, UID, GID и другие числа для всего невозможно. Службы разрешения имен переводят легко запоминающиеся имена в числа и наоборот. В этом уроке основное внимание уделяется разрешению имен хостов, но аналогичный процесс происходит с именами пользователей, именами групп, номерами портов и некоторыми другими.
 
 
-## Процесс разрешения имен
+## Процесс разименования
 
 Программы, преобразовывающие имена в числа, почти всегда используют функции, предоставляемые стандартной библиотекой C, которой в системах Linux является glibc проекта GNU. В первую очередь эти функции читают файл `/etc/nsswitch.conf` для получения инструкций о том, как разрешить этот тип имени. Этот урок посвящен разрешению имен хостов, но тот же процесс применим и к другим типам разрешения имен. Когда процесс читает `/etc/nsswitch.conf`, он ищет имя указанным способом. Поскольку `/etc/nsswitch.conf` поддерживает плагины, то, что будет дальше, может быть что угодно. После того, как функция завершит поиск имени или номера, она возвращает результат вызывающему процессу.
 
